--- a/index.html
+++ b/index.html
@@ -60,29 +60,29 @@
     .pod  {
     	    width:420px;
     	    border-bottom:3px solid #2bbfff;
+	    padding-bottom: 10px;
     	   }
-        b {
+        b{
         	   color: #084b9d;
         	   margin-top: 10px;
         	}
                
-        p  {
-              	color: #084bad;
-        	
+        p{
+              	color: #084bad;     	
         	}
         pre{
         	text-align: left;
-
+		line-height: 1.7;
         	}
-		span{
-			border-radius: 20px;
-			line-height: 1.2;
-			}
+	span{
+		border-radius: 20px;
+		line-height: 1.2;
+		}
 		ul {
     		text-align: left;
     		color: #FFFFFF;
     		}
-    	a {
+    	a{
     		color: #2bbfff;
     	}
 	.yellow {
